--- a/templates/arif.html
+++ b/templates/arif.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Merhabalar ben arif</h1>
+  <h1>Merhaba ben arif</h1>
+  <h2>Merhaba ben daha kucuk arif</h2>
 </body>
 </html>
