hala sorunlu ama yoruldum

--- a/templates/arif.html
+++ b/templates/arif.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Merhaba ben arif</h1>
   <h2>Merhaba ben daha kucuk arif</h2>
+  <h3>Merhaba ben daha daha kucuk arif</h3>
 </body>
 </html>
